--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 <button type="submit">Search</button>
             </form>
             <div class="error">
-                Word not found
             </div>
             <div class="results">
                 <div class="results-info">
@@ -37,17 +36,17 @@
                     </div>
                 </div>
                 <div class="results-list">
-                    <div class="resultsd-item">
-                        <div class="results-item__part"></div>
+                    <!-- <div class="resultsd-item">
+                        <div class="results-item__part">Noun</div>
                         <div class="results-item__definitions">
                             <div class="results-item__definition">
                                 <p>fcdvdfvdfvdsdsc</p>
-                                <div class="results-item__definition">
+                                <div class="results-item__example">
                                     sfdvgdfghgfgb
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </main>
